--- a/CJCapaNegocio/pom.xml
+++ b/CJCapaNegocio/pom.xml
@@ -5,6 +5,13 @@
     <artifactId>CJCapaNegocio</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.itson</groupId>
+            <artifactId>CJCapaDatos</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
