--- a/CJCapaPresentacion/pom.xml
+++ b/CJCapaPresentacion/pom.xml
@@ -10,6 +10,22 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>CJCapaNegocio</artifactId>
             <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.itson</groupId>
+                    <artifactId>CJCapaDatos</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.itson</groupId>
+            <artifactId>CJCapaDatos</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE160</version>
         </dependency>
     </dependencies>
     <properties>
